Update-2 Roadmap For Week Two

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <tr>
                     <th scope="row">2</th>
                     <td class="fs-5">Building The Project Architecture</td>
-                    <td class="fw-bold">Done</td>
-                    <td class="fw-bold">Done</td>
+                    <td class="text-success fw-bold">Done</td>
+                    <td class="text-success fw-bold">Done</td>
                 </tr>
 
                 <tr>
